<resources>
    <string name="app_name" translatable="false">VG7.Messenger</string>
    <string name="copyright_text" translatable="false">© 2024 Voznyuk Games 7</string>

    <string name="chats">Chats</string>
    <string name="profile">Profile</string>

    <string name="message">Message</string>

    <string name="enter_otp_code_sent_to_your_phone_number">Enter OTP-code sent to your phone number</string>
    <string name="otp_code">OTP-code</string>
    <string name="next">Next</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="send_otp_code">Send OTP-code</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>

    <string name="search_user">Search User</string>
    <string name="create_group">Create Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="phone_number">Phone number</string>
    <string name="status">Status</string>
    <string name="hide_phone_number">Hide phone number</string>
    <string name="update_profile">Update profile</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="group_name">Name</string>
    <string name="resend_otp_code">Resend OTP-code</string>
    <string name="resend_otp_code_in_seconds">Resend OTP-code in %d seconds</string>
    <string name="phone_number_not_valid">Phone number not valid</string>
    <string name="otp_verification_failed">OTP verification failed</string>
    <string name="otp_code_sent_successfully">OTP-code sent successfully</string>
    <string name="username_length_should_be_at_least_3_chars">Username length should be at least 3 chars</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="updated_failed">Updated failed</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="failed_to_upload_image">Failed to upload image</string>
    <string name="group_name_is_required">Group name is required</string>
    <string name="group_name_is_required2">Group name must be at least 4 characters long</string>
    <string name="are_you_sure_you_want_to_leave_your_account">Are you sure you want to leave your account?</string>

    <string name="member">member</string>
    <string name="member2">members</string>
    <string name="member3">members</string>

    <string name="add_member">Add member</string>
    <string name="delete_group">Delete group</string>
    <string name="leave_the_group">Leave the group</string>

    <string name="leave_group_message">Are you sure you want to leave the group?</string>
    <string name="delete_group_message">Are you sure you want to delete the group? All members from the group will be removed.</string>
    <string name="delete_private_chat_message">Are you sure you want to delete the chat? This chat will also be deleted from your interlocutor.</string>

    <string name="enable_notifications">Enable Notifications</string>
    <string name="notifications_are_disabled_message">Notifications are disabled. Please enable them in the settings to receive updates.</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>

    <string name="select_photo">Photo</string>
    <string name="select_video">Video</string>
    <string name="select_file">File</string>

    <string name="close">Close</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="you">You</string>
</resources>