<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp">

    <ImageView
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:background="@drawable/circular_bg"
        android:backgroundTint="@color/my_primary"
        android:src="@drawable/person_icon"
        android:scaleType="centerCrop"
        android:layout_marginBottom="@dimen/_30sdp"
        android:id="@+id/profile_image_view"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/off_black"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="@dimen/_4sdp"
        android:id="@+id/profile_username"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:hint="@string/phone_number"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/off_black"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="@dimen/_4sdp"
        android:enabled="false"
        android:id="@+id/profile_phone"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:hint="@string/status"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/off_black"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="@dimen/_4sdp"
        android:id="@+id/profile_status"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/profile_hide_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:thumbTint="@color/my_primary"
            android:trackTint="@color/off_black"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/hide_phone_number"
            android:fontFamily="@font/spartan_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/update_profile"
            android:fontFamily="@font/spartan_bold"
            android:id="@+id/profle_update_btn"/>
        <ProgressBar
            android:layout_width="@dimen/_32sdp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"
            android:id="@+id/profile_progress_bar"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/logout"
        android:textColor="@color/off_black"
        android:id="@+id/logout_btn"/>
</LinearLayout>