<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/shape_dialog">

    <ImageView
        android:id="@+id/logoutdg"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/logout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/are_you_sure_you_want_to_leave_your_account"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/spartan_bold"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/noBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_corner"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            android:fontFamily="@font/spartan_bold"
            android:backgroundTint="@color/my_primary"/>

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_corner"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:fontFamily="@font/spartan_bold"
            android:backgroundTint="@color/my_primary"/>

    </LinearLayout>

</LinearLayout>