<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="@dimen/_15sdp"
    android:weightSum="100"
    tools:context=".LoginUsernameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20">
        <RelativeLayout
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:text="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:text="2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:text="3"/>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_115sdp"
        android:layout_height="@dimen/_115sdp"
        android:src="@drawable/person_icon"
        app:tint="@color/my_primary"
        android:layout_weight="20"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_username"
        android:fontFamily="@font/spartan_bold"
        android:textColor="@color/black"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="@dimen/_20sdp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="5">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@color/off_black"
            android:inputType="text"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="@dimen/_4sdp"
            android:id="@+id/login_username"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="20">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/sign_in"
            android:fontFamily="@font/spartan_bold"
            android:id="@+id/login_let_me_in_btn"/>
        <ProgressBar
            android:layout_width="@dimen/_32sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:indeterminateTint="@color/my_primary"
            android:layout_gravity="center"
            android:id="@+id/login_progress_bar"/>
    </LinearLayout>

</LinearLayout>
